# ai-netapp-assistant

./: .env  .env.backend  .env.backend.example  .gitignore  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/app/: main.py
backend/app/models/: models.py
backend/app/workers/: celery_app.py
backend/migration/: env.py
frontend/: Dockerfile  index.html  package.json
frontend/src/: App.tsx
