[project]
name = "ai-netapp-backend"
description = "AI NetApp Assistant Backend"
authors = [{ name = "Noobitah" }]
version = "0.1.0"
dependencies = [
"fastapi~=0.115",
"uvicorn[standard]~=0.30",
"pydantic~=2.8",
"sqlalchemy~=2.0",
"alembic~=1.13",
"psycopg2-binary~=2.9",
"python-multipart~=0.0.9",
"passlib[bcrypt]~=1.7",
"pyjwt~=2.8",
"cryptography~=43.0",
"celery~=5.4",
"redis~=5.0",
"structlog~=24.1",
# NetApp SDK (optional for now; add later when you connect)
# "netapp-ontap~=9.13"
]


[tool.setuptools]
py-modules = []